# Provex

./: .gitignore  PROVEX_SRS.docx  ollama_integration_test.py  qwen_integration_test.py
LLM/: ollama_integration_test.py  qwen_integration_test.py
Provex/: alembic.ini  docker-compose.yml  pyproject.toml
Provex/app/: main.py
Provex/app/agents/: coding_node.py  gamify_node.py  graph.py  router.py  state.py  state_updater.py  study_node.py
Provex/app/api/: agent.py  auth.py  challenges.py  gamification.py  health.py  hints.py  lessons.py  problems.py  users.py
Provex/app/core/: config.py  database.py  (+2 more)
Provex/migrations/: env.py
backend/: docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: coding_node.py  gamify_node.py  graph.py  router.py  state.py  state_updater.py  study_node.py
backend/app/api/: agent.py  auth.py  challenges.py  gamification.py  health.py  hints.py  lessons.py  problems.py  users.py
backend/app/core/: config.py  database.py  redis_client.py  security.py
backend/app/dependencies/: auth.py
backend/app/models/: lesson.py  problem.py  progress.py  submission.py  user.py
backend/app/pipelines/: qwen.py  study_pipeline.py
backend/app/schemas/: auth.py  gamification.py  problem.py  user.py
backend/app/services/: compiler.py  gamification.py
backend/migrations/: env.py
backend/migrations/versions/: 376f0d1c0038_add_daily_missions_column.py  49fbff39bd98_phase2_check.py  a564748f6864_initial_tables.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+63 files in other folders)
